Bug 71740 - FORMATTING: AutoCorrection of === (border double) is almost invisible
Summary: FORMATTING: AutoCorrection of === (border double) is almost invisible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-18 14:20 UTC by Laurent Balland
Modified: 2013-11-24 20:46 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Comparison of border thickness (73.70 KB, image/png)
2013-11-18 15:53 UTC, Laurent Balland
Details
using "===" in new daily build (76.54 KB, image/jpeg)
2013-11-23 06:53 UTC, 曾孝薇
Details
Comparison of same file opened by LibreOffice and Openoffice (115.04 KB, image/jpeg)
2013-11-24 11:17 UTC, 曾孝薇
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2013-11-18 14:20:00 UTC
Problem description: 

Steps to reproduce:
1. Set Tool > AutoCorrection Options > Options > Apply Border
2. Insert === on a new line
3. Type Enter

Current behavior:
A border is inserted but it is so thin that it is almost invisible

Expected behavior:
A double border of 1 pt width
              
Operating System: All
Version: 4.1.0.4 release
Comment 1 Paul 2013-11-18 15:51:36 UTC
Able to confirm using 4.1.3.2 release (x86-64 openSuse 12.3)

When using "===" a single line of 0.05pt is created.
Comment 2 Laurent Balland 2013-11-18 15:53:45 UTC
Created attachment 89414 [details]
Comparison of border thickness

Comparison of border thickness inserted by AutoCorrection
- historical OOo
- LibO with BorderLine2
- new proposition with commit https://gerrit.libreoffice.org/#/c/6710/
Comment 3 Commit Notification 2013-11-20 13:20:57 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0c5f4522f8aa063b3e7c034db079d74b7f0b3fa

fdo#71740 AutoCorrection Border emphasis differences



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Adolfo Jayme Barrientos 2013-11-20 19:21:14 UTC
Thanks for the fix! I guess it’d be good to include the comparison image in the release notes :-)
Comment 5 曾孝薇 2013-11-23 06:53:36 UTC
Created attachment 89674 [details]
using "===" in new daily build
Comment 6 曾孝薇 2013-11-23 06:55:16 UTC
I found the line visible in daily build now,but the line is a single line.
when saving the file,then open it by OpenOffice 4.0.1,the line is correct double line.
Comment 7 Laurent Balland 2013-11-24 10:10:32 UTC
(In reply to comment #6)
> I found the line visible in daily build now,but the line is a single line.
@ 曾孝薇 : I do not agree with you. The line is actually double as shown in your attachment 89674 [details] and screen shot attachment 89414 [details].
Please check again with a higher zoom.
Comment 8 曾孝薇 2013-11-24 11:17:13 UTC
Created attachment 89709 [details]
Comparison of same file opened by LibreOffice and Openoffice

The same file opened by Libreoffice and Openoffice in zoom 100%,line is double line obviously in Openoffice,but LibreOffice need higher zoom.I think it should be consistent in visual .
Comment 9 Laurent Balland 2013-11-24 20:46:23 UTC
Since LibO 3.4 (I think), LibO treats in a different way border. In case of double line, the width represents the total width of the line for LibO. In the previous versions, the width represented the width of each line, which was quite confusing in case of double line with different width.

If you need larger border, you may try AutoCorrection with "###" instead as "===" as shown in attachment 89414 [details].

AutoCorrect works now as expected so I close the bug. If you want to change the way as LibO treats border, please open a new bug, because it is a totally different problem as the one treated in this bug report.