fdo#71740 AutoCorrection Border emphasis differences

AutoCorrection of === create a so thin border that it is almost
invisible. This patch increases width of borders to get differences
more visible

Change-Id: Ifb34e52410b37fe74059721386cbfa49df590ace
Reviewed-on: https://gerrit.libreoffice.org/6710
Reviewed-by: Thorsten Behrens <thb@documentfoundation.org>
Tested-by: Thorsten Behrens <thb@documentfoundation.org>